# MAX

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PROJECT_STATUS.md  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-04-max-phase1-core-foundation.md  2026-04-04-max-phase1-critical-fixes.md  2026-04-04-max-phase2-memory-system.md  2026-04-04-max-phase3-communication-layer.md  2026-04-05-max-phase4-command-chain.md  2026-04-05-max-phase5-quality-gate.md  2026-04-05-max-phase6a-tool-framework.md  2026-04-05-max-phase6b-full-tools.md  2026-04-05-phase7-evolution-system.md  2026-04-05-sentinel-anti-degradation.md  2026-04-06-go-live-plan-a-infrastructure-hardening.md  2026-04-06-go-live-plan-b-api-composition-root.md  2026-04-06-go-live-plan-c-docker-azure.md
docs/superpowers/specs/: 2026-04-04-max-design.md  2026-04-04-max-phase2-memory-system.md  2026-04-04-max-phase3-communication-layer.md  2026-04-05-max-go-live-design.md  2026-04-05-max-phase4-command-chain.md  2026-04-05-max-phase5-quality-gate.md  2026-04-05-max-phase6a-tool-framework.md  2026-04-05-max-phase6b-full-tools.md  2026-04-05-max-phase7-evolution-system.md  (+1 more)
scripts/: azure-provision.sh  deploy.sh  init_db.py
src/max/: __main__.py  app.py  config.py  observability.py  recovery.py  scheduler.py
src/max/agents/: __init__.py  (+1 more)
tests/: conftest.py  test_agent_tool_loop.py  test_anchors.py  test_api_admin.py  test_api_assembly.py  test_api_auth.py  test_api_health.py  test_api_introspection.py  test_api_messaging.py  test_api_rate_limit.py  test_api_telegram.py  test_app_composition.py  test_auditor.py  test_aws_tools.py  test_azure_scripts.py  test_base_agent.py  test_browser_tools.py  test_calendar_tools.py  test_canary.py  test_circuit_breaker.py  test_code_tools.py  test_comm_integration.py  test_comm_models.py  test_command_integration.py  test_command_models.py  test_communicator.py  test_compaction.py  test_config.py  test_config_go_live.py  test_context_packager.py  test_coordinator.py  test_coordinator_state.py  test_data_tools.py  test_database_tools.py  test_docker.py  test_docker_tools.py  test_document_tools.py  test_email_tools.py  test_embeddings.py  test_entry_point.py  (+73 more)
(+108 files in other folders)
