[project]
name = "max"
version = "0.1.0"
description = "Max — self-evolving autonomous AI agent system"
requires-python = ">=3.12"
dependencies = [
    "anthropic[aiohttp]>=0.88.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "voyageai>=0.3.0",
    "aiogram>=3.27.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
browser = ["playwright>=1.49"]
aws = ["boto3>=1.35"]
docker = ["docker>=7.1"]
documents = ["PyPDF2>=3.0", "openpyxl>=3.1", "jsonpath-ng>=1.6"]
data = ["polars>=1.0"]
media = ["Pillow>=11.0"]
email-tools = ["aiosmtplib>=3.0", "aioimaplib>=2.0"]
calendar-tools = ["icalendar>=6.0", "caldav>=1.4"]
scraping = ["beautifulsoup4>=4.12"]
ssh = ["asyncssh>=2.17"]
openapi = ["pyyaml>=6.0"]
all-tools = [
    "max[browser,aws,docker,documents,data,media,email-tools,calendar-tools,scraping,ssh,openapi]"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/max"]
